[tool.black]
line-length = 119
target-version = ["py39"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "hf-language-modeling"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <corea_kyj@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
